# Veltrix

./: .env  .env.example  AGENTS.md  SETUP.md  audit_hooks.py  middleware.ts  next.config.mjs  package-lock.json  package.json  pnpm-workspace.yaml  tsconfig.json  tsconfig.tsbuildinfo
backend/: .env  .env.example  Dockerfile  README.md  alembic.ini  bootstrap.py  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  nginx.conf  pyproject.toml  requirements-dev.txt  test_forecast.py  test_forecast_api.py  test_ohlc.py  test_optimizer.py  test_optimizer_api.py  test_portfolio.py  test_yahoo_ohlc.py  test_yahoo_ohlc_qqq.py  train_models.py  veltrix.db
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/core/: config.py  logging.py  redis_client.py  security.py
backend/app/db/: models.py  session.py
backend/app/schemas/: auth.py
backend/app/services/: agent_orchestration_service.py  analytics_service.py  auth_service.py  copilot.py  embedding_service.py  flow_service.py  forecast_ensemble_service.py  forecast_service.py  macro_service.py  market_providers.py  market_service.py  optimizer_service.py  portfolio_service.py  risk_service.py  sector_service.py  signals_engine.py  stream_manager.py  vector_store.py
backend/app/tasks/: worker.py
backend/app/ws/: manager.py
backend/migrations/: 0001_init.sql  env.py
backend/ml/: README.md  __init__.py  ensemble_trainer.py  feature_pipeline.py
backend/ml/artifacts/: signal_model.json
backend/ml/inference/: __init__.py  predict.py
backend/ml/training/: __init__.py  pipeline.py
(+95 files in other folders)
