[project]
name = "veltrix-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "sqlalchemy>=2.0.36",
  "psycopg[binary]>=3.2.3",
  "email-validator>=2.2.0",
  "pydantic-settings>=2.6.1",
  "python-jose[cryptography]>=3.3.0",
  "passlib>=1.7.4",
  "redis>=5.2.0",
  "alembic>=1.14.0",
  "httpx>=0.28.0",
  "yfinance>=0.2.54",
  "celery>=5.4.0"
]

[project.optional-dependencies]
quant = [
  "numpy>=1.26.4",
  "pandas>=2.2.2",
  "xgboost>=2.1.1",
  "prophet>=1.1.5"
]
agents = [
  "tradingagents @ git+https://github.com/TauricResearch/TradingAgents.git"
]
